--- a/src/ui/components/Collapsible.css
+++ b/src/ui/components/Collapsible.css
@@ -6,7 +6,6 @@
   overflow: hidden;
   transition: all 0.3s ease;
   background-color: #fff;
-  /* Responsive margin */
   margin: 1.25rem auto;
 }
 
@@ -21,19 +20,60 @@
   font-weight: 500;
 }
 
+.collapsible-header .left-content {
+  display: flex;
+  align-items: center;
+}
+
+.collapsible-header .icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  margin-right: 1rem;
+}
+
+.collapsible-header .icon-container svg {
+  color: #333;
+  font-size: 1.25rem;
+}
+
 .collapsible-header:hover {
   background-color: #f8f8f8;
 }
 
 .collapsible-content {
-  padding: 1.25rem 3.75rem;
+  padding: 0 3.75rem;
   color: #333333;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease, padding 0.3s ease;
+}
+
+.collapsible-content.open {
+  padding: 1.25rem 3.75rem;
+  max-height: 1000px; /* Arbitrary large value to ensure it opens fully */
 }
 
 .collapsible-content li {
   margin-bottom: 0.625rem;
   font-size: 1.2em;
   line-height: 1.5;
+  position: relative;
+  padding-left: 1.5rem;
+  list-style: none; 
+}
+
+.collapsible-content li::before {
+  content: '\2713'; /* Check mark icon */
+  position: absolute;
+  left: 0;
+  color: #28a745; /* Green color for check mark */
+  font-size: 1.2em;
+  line-height: 1.2;
 }
 
 /* Responsive styles */
@@ -48,11 +88,19 @@
   }
 
   .collapsible-content {
+    padding: 0 2rem;
+  }
+
+  .collapsible-content.open {
     padding: 1rem 2rem;
   }
 
   .collapsible-content li {
     font-size: 1em;
+  }
+
+  .collapsible-content li::before {
+    font-size: 1.2em;
   }
 }
 
@@ -67,10 +115,18 @@
   }
 
   .collapsible-content {
+    padding: 0 1.5rem;
+  }
+
+  .collapsible-content.open {
     padding: 0.75rem 1.5rem;
   }
 
   .collapsible-content li {
     font-size: 0.9em;
+  }
+
+  .collapsible-content li::before {
+    font-size: 1em;
   }
 }
