styling updated, styling separated, updated hero

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,3 +4,10 @@
     margin: 6rem auto;
     width: 90%;
 }
+
+.intro-info-section-container{
+    display: flex;
+    flex-direction: column;
+    margin: 6rem auto;
+    width: 90%;
+}
