--- a/src/ui/styles/CustomButton.css
+++ b/src/ui/styles/CustomButton.css
@@ -2,9 +2,9 @@
   background-color: #0081AF;
   color: #FFFFFF; 
   border: none;
-  padding: 10px 20px;
+  padding: 8px 16px;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   width: 100%;
@@ -13,4 +13,14 @@
 
 .custom-button:hover {
   background-color: #006386;
+}
+
+.custom-button.transparent {
+  background-color: #FFFFFF;
+  color: #0081AF;
+  border: 2px solid #0081AF;
+}
+
+.custom-button.transparent:hover {
+  background-color: #ebebeb;
 }
