--- a/src/ui/styles/Hero.css
+++ b/src/ui/styles/Hero.css
@@ -4,11 +4,11 @@
   justify-content: center;
   background: linear-gradient(to bottom, #f8c4c4, #ffffff);
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   position: relative;
-  height: 50vh;
-  padding: 20px;
-  padding-top: 60px;
+  height: 70vh;
+  padding: 1.25rem;
+  padding-top: 3.75rem;
   margin-top: 0;
 }
 
@@ -27,13 +27,14 @@
 
 .hero-image {
   width: 60%;
-  max-width: 700px;
+  max-width: 43.75rem;
 }
 
 .hero-text {
   width: 50%;
   text-align: center;
-  padding: 20px;
+  justify-content: center;
+  padding: 1.25rem;
   color: white;
   z-index: 1;
 }
@@ -47,19 +48,24 @@
 
 .hero-text p {
   font-size: 1.2rem;
-  margin: 10px 0 0;
+  margin: 0.625rem 0 0;
   padding: 0.5rem;
   color: white; 
 }
 
 .hero-buttons {
-  margin-top: 20px;
+  width: 100%;
+  margin-top: 1.25rem;
   display: flex;
-  gap: 10px;
+  gap: 0.625rem;
   justify-content: center;
 }
 
-@media (max-width: 768px) {
+.hero-buttons .custom-button {
+  width: 12rem;
+} 
+
+@media (max-width: 48rem) {
   .hero-container {
     flex-direction: column;
     text-align: center;
