--- a/src/ui/styles/WhyChooseUs.css
+++ b/src/ui/styles/WhyChooseUs.css
@@ -17,6 +17,9 @@
   margin: 0 auto 40px;
   text-align: center;
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section h2 {
