--- a/src/ui/styles/Hero.css
+++ b/src/ui/styles/Hero.css
@@ -31,9 +31,11 @@
 }
 
 .hero-text {
-  width: 50%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  width: 50%;
   padding: 1.25rem;
   color: white;
   z-index: 1;
@@ -57,7 +59,7 @@
   width: 100%;
   margin-top: 1.25rem;
   display: flex;
-  gap: 0.625rem;
+  gap: 2rem;
   justify-content: center;
 }
 
