--- a/src/ui/styles/NonCollapsible.css
+++ b/src/ui/styles/NonCollapsible.css
@@ -8,6 +8,7 @@
 
 .non-collapsible-header {
   display: flex;
+  flex-direction: row;
   align-items: center;
   padding: 1.25rem;
   font-size: 1.5em;
@@ -16,6 +17,7 @@
 
 .non-collapsible-header .left-content {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
