--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,3 +19,15 @@
     width: 90%;
     background-color: #f9f9f9;
 }
+
+.pricing-section-container{
+    margin: 6rem auto;
+}
+
+.cleaning-duration-section-container{
+    margin: 6rem auto;
+}
+
+.whychooseus-section-container{
+    margin: 6rem auto;
+}
