--- a/src/ui/styles/LanguageSwitcher.css
+++ b/src/ui/styles/LanguageSwitcher.css
@@ -1,7 +1,7 @@
 .language-switcher {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  margin: 0.5rem 0;
 }
 
 .language-switcher select {
