--- a/src/ui/styles/Navbar.css
+++ b/src/ui/styles/Navbar.css
@@ -1,28 +1,34 @@
 .navbar {
   display: flex;
   align-items: center;
-  padding: 1rem 2rem;
+  justify-content: space-between;
+  padding: 1rem;
   position: fixed;
   width: 100%;
+  box-sizing: border-box;
   top: 0;
   left: 0;
   background-color: #f8c4c4;
   z-index: 2;
+  transition: transform 0.3s ease-in-out;
 }
 
 .navbar.hidden {
   transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
 }
 
 .navbar.visible {
   transform: translateY(0);
-  transition: transform 0.3s ease-in-out;
+}
+
+.navbar-left {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .navbar-logo {
-  height: 2.6rem;
-  margin-right: 0.625rem;
+  height: 2.5rem;
 }
 
 .navbar-text {
@@ -31,10 +37,8 @@
 }
 
 .navbar-language-switcher {
-  margin-left: auto;
   display: flex;
   gap: 0.5rem;
-  padding-right: 3rem;
 }
 
 .navbar-language-switcher button {
@@ -53,37 +57,33 @@
 
 @media (max-width: 768px) {
   .navbar {
-    padding: 0.5rem 1rem;
+    padding: 0.75rem;
   }
 
   .navbar-logo {
-    height: 2.5rem;
-    margin-right: 0.5rem;
+    height: 2.2rem;
   }
 
   .navbar-text {
-    font-size: 1.25rem;
-  }
-  .navbar-language-switcher {
-    padding-right: 2rem;
+    font-size: 1.1rem;
   }
 }
 
 @media (max-width: 480px) {
   .navbar {
-    padding: 0.5rem 1rem;
+    align-items: center;
+    padding: 0.5rem;
+  }
+
+  .navbar-left {
+    margin-bottom: 0.5rem;
   }
 
   .navbar-logo {
     height: 2rem;
-    margin-right: 0;
-    margin-bottom: 0.5rem;
   }
 
   .navbar-text {
     font-size: 1rem;
-  }
-  .navbar-language-switcher {
-    padding-right: 2rem;
   }
 }
